WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309048
URLPattern.exec() crashes with nested capturing group
https://bugs.webkit.org/show_bug.cgi?id=309048
Summary
URLPattern.exec() crashes with nested capturing group
Chris Dumez
Reported
2026-03-02 23:50:26 PST
URLPattern.exec() crashes with nested capturing group: ``` new URLPattern({ pathname: "/:foo((?<x>a))" }).exec({ pathname: "/a" }); ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-02 23:50:38 PST
<
rdar://171543463
>
Chris Dumez
Comment 2
2026-03-02 23:55:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59781
EWS
Comment 3
2026-03-03 01:56:53 PST
Committed
308534@main
(e3f20183b0c4): <
https://commits.webkit.org/308534@main
> Reviewed commits have been landed. Closing PR #59781 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug